--- a/app/templates/components/pw-nav.hbs
+++ b/app/templates/components/pw-nav.hbs
@@ -7,7 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      {{#link-to 'venues' class='navbar-brand'}}
+        {{emoji-icon 'pizza'}} Pizza Week!
+      {{/link-to}}
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
