--- a/app/templates/venues.hbs
+++ b/app/templates/venues.hbs
@@ -1,6 +1,4 @@
-<div class="col-sm-3 col-md-2 sidebar">
+<div class="col-sm-4 col-md-3 sidebar">
   {{pw-venue-list venues=model}}
 </div>
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-  {{leaflet-map class="venue__map" venues=model}}
-</div>
+{{outlet}}
