Use slugs in URL instead of id

--- a/app/templates/components/pw-venue-list.hbs
+++ b/app/templates/components/pw-venue-list.hbs
@@ -1,7 +1,7 @@
 <ul class="nav nav-sidebar">
   {{#each venues as |venue|}}
     {{#active-link}}
-      {{link-to venue.name 'venues.venue' venue}}
+      {{link-to venue.name 'venues.venue' venue.slug}}
     {{/active-link}}
   {{else}}
     <li><a href="#">No venues.</a></li>
