Style the venue page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -93,8 +93,12 @@ body {
   border-radius: 50%;
 }
 
-.venue__map {
+.venues__map {
   height: 500px;
+}
+
+.venue__map {
+  height: 250px;
 }
 
 .venue__avatar {
