--- a/app/templates/venues/index.hbs
+++ b/app/templates/venues/index.hbs
@@ -1,3 +1,3 @@
 <div class="col-sm-8 col-sm-offset-4 col-md-9 col-md-offset-3 main">
-  {{pw-venues-map class="venue__map" venues=model}}
+  {{pw-venues-map class="venues__map" venues=model}}
 </div>
