--- a/app/templates/venues/venue.hbs
+++ b/app/templates/venues/venue.hbs
@@ -1,7 +1,10 @@
 <div class="col-sm-8 col-sm-offset-4 col-md-9 col-md-offset-3 main">
-  <h1>{{model.name}}</h1>
   <div class="row">
-    <div class="col-sm-8 col-sm-offset-4 col-md-9 col-md-offset-3 main">
+    <div class="col-sm-6 col-md-6">
+      <h3>{{model.name}}</h3>
+      <p>{{model.address}}</p>
+    </div>
+    <div class="col-sm-6 col-md-6">
       {{pw-venue-map class="venue__map" venue=model}}
     </div>
   </div>
