--- a/app/templates/components/pw-nav.hbs
+++ b/app/templates/components/pw-nav.hbs
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       {{#link-to 'venues' class='navbar-brand'}}
-        {{emoji-icon 'pizza'}} Pizza Week!
+        Pizza Week!
       {{/link-to}}
     </div>
     <div id="navbar" class="navbar-collapse collapse">
