--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,7 +1,9 @@
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700);
 @import "ember-bootstrap-sass";
 
 body {
   padding-top: 50px;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 
