--- a/client/app/templates/venues/venue.hbs
+++ b/client/app/templates/venues/venue.hbs
@@ -5,7 +5,7 @@
       <p>{{model.address}}</p>
     </div>
     <div class="col-sm-6 col-md-6">
-      {{pw-venue-map class="venue__map" venue=model}}
+      {{pw-venue-map class="venue__map" locations=model.locations}}
     </div>
   </div>
 </div>
