--- a/client/app/templates/venues/venue.hbs
+++ b/client/app/templates/venues/venue.hbs
@@ -2,7 +2,9 @@
   <div class="row">
     <div class="col-sm-6 col-md-6">
       <h3>{{model.name}}</h3>
-      <p>{{model.address}}</p>
+      {{#each model.locations as |location|}}
+        <p>{{location.address}}</p>
+      {{/each}}
     </div>
     <div class="col-sm-6 col-md-6">
       {{pw-venue-map class="venue__map" locations=model.locations}}
